[package]
name = "elite_journal"
description = "Elite: Dangerous journal file stuctures and parsers"
version = "0.1.0"
authors = ["Nathan Lilienthal <nathan@nixpulvis.com>"]
license = "Beerware"
edition = "2018"

[features]
with-sqlx = ["sqlx/runtime-async-std-native-tls"]
with-postgis-sqlx = ["with-sqlx", "geozero/with-postgis-sqlx"]

[dependencies]
chrono     = { version = "0.4", features = ["serde"] }
geozero    = "^0.9"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx       = { version = "^0.6", optional = true }
