[package]
name = "elite_journal"
description = "Elite: Dangerous journal file stuctures and parsers"
version = "0.2.0"
authors = ["Nathan Lilienthal <nathan@nixpulvis.com>"]
license = "Beerware"
edition = "2018"

[features]
with-sqlx = ["sqlx/runtime-async-std-native-tls"]
with-postgis-sqlx = ["with-sqlx", "geozero/with-postgis-sqlx"]

[dependencies]
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono     = { version = "0.4", features = ["serde"] }
sqlx       = { version = "^0.8", optional = true, features = ["postgres"] }
geozero    = { git = "https://github.com/nixpulvis/geozero", optional = true }
